Fix button group on mobile

--- a/src/css/blocks/_button-group.css
+++ b/src/css/blocks/_button-group.css
@@ -4,16 +4,15 @@
     text-align: left;
   }
 
-  .btn:first-child {
-    border-width: 0;
+  &--toggle > .btn {
+    border-bottom: 0;
   }
 
   button:not(:first-of-type) {
-    margin: 5px 0;
-    border-bottom: 0;
-    border-radius: 0 2px 2px 0;
+
     @media (--tablet) {
-      margin: 0 0 0 -4px;
+      border-radius: 0 2px 2px 0;
+      margin-left: -4px;
       border-left: 1px solid rgba(0,0,0,0.3);
     }
   }
@@ -23,9 +22,14 @@
     width: 49%;
     padding: 0.45rem 1rem;
     font-size: 1.4rem;
-    margin: 2rem 0;
-    border-radius: 2px 0 0 2px;
-    @media (--tablet) { padding: 0.15rem 1rem; margin: 0; width: auto; }
+    margin: 1rem 0 1rem .2rem;
+    border-radius: 2px;
+    @media (--tablet) {
+      padding: 0.15rem 1rem;
+      margin: 0;
+      width: auto;
+      border-radius: 2px 0 0 2px;
+    }
 
     & > i {
       font-size: 1rem;
@@ -42,7 +46,7 @@
       display: none;
       position: absolute;
       right: 1rem;
-      top: 1rem;
+      top: 20%;
     }
   }
 
